error.txt
In file included from cupsfilters/catalog.c:11:
./cupsfilters/libcups2-private.h:4: warning: "HAVE_LIBCUPS2" redefined
    4 | # define HAVE_LIBCUPS2
      | 
In file included from ./cupsfilters/libcups2-private.h:1,
                 from cupsfilters/catalog.c:11:
./config.h:87: note: this is the location of the previous definition
   87 | #define HAVE_LIBCUPS2 1
      | 
In file included from cupsfilters/catalog.c:11:
./cupsfilters/libcups2-private.h:19:53: error: duplicate macro parameter "int"
   19 | #  define httpConnect(char , int , http_addrlist_t, int , http_encryption_t , bool, int, int )            httpConnect2(char, int , http_addrlist_t , int, http_encryption_t, int , int , int )
      |                                                     ^~~
In file included from cupsfilters/catalog.c:12:
./config.h:87: warning: "HAVE_LIBCUPS2" redefined
   87 | #define HAVE_LIBCUPS2 1
      | 
In file included from cupsfilters/catalog.c:11:
./cupsfilters/libcups2-private.h:4: note: this is the location of the previous definition
    4 | # define HAVE_LIBCUPS2
      | 
cupsfilters/catalog.c: In function ‘cfGetURI’:
cupsfilters/catalog.c:54:3: warning: ‘httpConnect’ is deprecated: Use httpConnect2 instead. [-Wdeprecated-declarations]
   54 |   http = httpConnect(host, port, NULL, AF_UNSPEC, encryption, 1,5000, NULL);
      |   ^~~~
In file included from ./cupsfilters/libcups2-private.h:5,
                 from cupsfilters/catalog.c:11:
/usr/include/cups/http.h:476:26: note: declared here
  476 | extern http_t           *httpConnect(const char *host, int port) _CUPS_DEPRECATED_1_7_MSG("Use httpConnect2 instead.");
      |                          ^~~~~~~~~~~
cupsfilters/catalog.c:54:10: error: too many arguments to function ‘httpConnect’
   54 |   http = httpConnect(host, port, NULL, AF_UNSPEC, encryption, 1,5000, NULL);
      |          ^~~~~~~~~~~
In file included from ./cupsfilters/libcups2-private.h:5,
                 from cupsfilters/catalog.c:11:
/usr/include/cups/http.h:476:26: note: declared here
  476 | extern http_t           *httpConnect(const char *host, int port) _CUPS_DEPRECATED_1_7_MSG("Use httpConnect2 instead.");
      |                          ^~~~~~~~~~~
At top level:
cupsfilters/catalog.c:315:1: warning: ‘compare_choices’ defined but not used [-Wunused-function]
  315 | compare_choices(void *a,
      | ^~~~~~~~~~~~~~~
make[2]: *** [Makefile:1646: cupsfilters/libcupsfilters_la-catalog.lo] Error 1
make[1]: *** [Makefile:2150: all-recursive] Error 1
make: *** [Makefile:1143: all] Error 2

